# hspec-megaparsec

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  hspec-megaparsec.cabal  stack.yaml
.github/workflows/: ci.yaml
Test/Hspec/: Megaparsec.hs
tests/: Main.hs
