name:                 hspec-megaparsec
version:              0.3.1
cabal-version:        >= 1.10
tested-with:          GHC==7.8.4, GHC==7.10.3, GHC==8.0.2
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov@opmbx.org>
maintainer:           Mark Karpov <markkarpov@opmbx.org>
homepage:             https://github.com/mrkkrp/hspec-megaparsec
bug-reports:          https://github.com/mrkkrp/hspec-megaparsec/issues
category:             Testing, Parsing
synopsis:             Utility functions for testing Megaparsec parsers with Hspec
build-type:           Simple
description:          Utility functions for testing Megaparsec parsers with Hspec.
extra-doc-files:      CHANGELOG.md
                    , README.md

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  build-depends:      base               >= 4.7 && < 5.0
                    , containers         >= 0.5 && < 0.6
                    , hspec-expectations >= 0.5 && < 0.9
                    , megaparsec         >= 5.0 && < 6.0

  if !impl(ghc >= 8.0)
    build-depends:    semigroups         == 0.18.*
  if !impl(ghc >= 7.8)
    build-depends:    tagged             == 0.8.*

  exposed-modules:    Test.Hspec.Megaparsec
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -Wall
  default-language:   Haskell2010

test-suite tests
  main-is:            Main.hs
  hs-source-dirs:     tests
  type:               exitcode-stdio-1.0
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -Wall
  build-depends:      base               >= 4.7 && < 5.0
                    , containers         >= 0.5 && < 0.6
                    , hspec              >= 2.0 && < 3.0
                    , hspec-expectations >= 0.5 && < 0.9
                    , hspec-megaparsec
                    , megaparsec         >= 5.0 && < 6.0
  if !impl(ghc >= 8.0)
    build-depends:    semigroups         == 0.18.*
  if !impl(ghc >= 7.8)
    build-depends:    tagged             == 0.8.*

  default-language:   Haskell2010

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/hspec-megaparsec.git
